--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/paho-mqtt": "^1.0.10",
     "mqtt": "^5.4.0",
     "next": "14.1.3",
     "node": "^21.7.1",
+    "paho-mqtt": "^1.1.0",
     "react": "^18",
     "react-dom": "^18"
   },
