--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/paho-mqtt": "^1.0.10",
+    "axios": "^1.6.8",
     "mqtt": "^5.4.0",
     "next": "14.1.3",
     "node": "^21.7.1",
